# database/models/user.js
@@ -1,10 +1,38 @@
 const mongoose = require('mongoose');
 
 const userSchema = new mongoose.Schema({
-    firstName: String,
-    lastName: String,
-    email: String,
-    password: String
+    firstName: {
+        type: String,
+        required: true
+      },
+    lastName: {
+        type: String,
+        required: true
+      },
+    email: {
+        type: String,
+        required: true
+      },
+    password: {
+        type: String,
+        required: true
+      },
+    pastTravels: [{
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Travel',
+        required: false
+      }],
+    likedTravels: [{
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Travel',
+        required: false
+      }],
+    upcomingTravels: [{
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'Travel',
+        required: false
+      }]
+
 });
 
 const User = mongoose.model('User', userSchema);
